Prevent `#mixture__page_nav` flex wrapping

--- a/css/mixture.less
+++ b/css/mixture.less
@@ -120,6 +120,7 @@ hr {
 
 #mixture__page_nav {
   justify-content: space-between;
+  flex-wrap: nowrap;
   margin: 0 auto @ini_spacer auto;
 }
 
